# fast_api_blog

./: .gitignore  Dockerfile  alembic.ini  auth.py  blog.db  config.py  database.py  email_utils.py  github_storage.py  image_utils.py  main.py  models.py  populate_db.py  pyproject.toml  schemas.py  snippets.txt
alembic/: env.py
alembic/versions/: 8b7444fe8c08_add_likes_to_posts.py  e07e57924e6f_initial_schema.py
routers/: posts.py  users.py
static/: site.webmanifest
static/css/: main.css
templates/: account.html  forgot_password.html  home.html  layout.html  login.html  post.html  register.html  reset_password.html  user_posts.html
templates/email/: password_reset.html
tests/: conftest.py  test_users.py
