[project]
name = "algorithm-and-blues"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosmtplib>=5.1.0",
    "aiosqlite>=0.22.1",
    "alembic>=1.18.4",
    "boto3>=1.43.6",
    "fastapi[standard]>=0.136.1",
    "greenlet>=3.5.0",
    "httpx>=0.28.1",
    "pillow>=12.2.0",
    "psycopg[binary]>=3.3.4",
    "pwdlib[argon2]>=0.3.0",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "python-multipart>=0.0.26",
    "requests>=2.33.1",
    "sqlalchemy>=2.0.49",
]
